syntax = "proto3";

package secstorage;

option go_package = "secstorage/internal/api/proto";

import "google/protobuf/timestamp.proto";

message AuthData {
  string login = 1;
  string password = 2;
}

message TokenData {
  string token = 1;
  google.protobuf.Timestamp expireAt = 2;
}

service Auth {
  rpc Register(AuthData) returns (TokenData);
  rpc Login(AuthData) returns (TokenData);
}
